Some cleanups. Began to implement arena mode fetching.